Feature: Add in table: percents, last-penultimate price

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,7 +19,10 @@
                 <tr>
                     <th>Ссылка</th>
                     <th>Последняя цена</th>
-                    <th>Разница цен</th>
+                    <th>Разница цен start-last</th>
+                    <th>% start-last</th>
+                    <th>Разница цен last-penultimate</th>
+                    <th>% last-penultimate</th>
                 </tr>
                 </thead>
                 <tbody>
