--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,10 +19,8 @@
                 <tr>
                     <th>Ссылка</th>
                     <th>Последняя цена</th>
-                    <th>Разница цен start-last</th>
-                    <th>% start-last</th>
-                    <th>Разница цен last-penultimate</th>
-                    <th>% last-penultimate</th>
+                    <th>Разница цен</th>
+                    <th>%</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -39,6 +37,16 @@
 
     <!-- Блок справа -->
     <div id="side-container">
+        <div id="options">
+            <h3>Отображаемое в таблице соотношение цен:</h3>
+            <label class="radio-button">
+                <input type="radio" name="diffOption" value="start-last" checked="checked" onchange="updateDiff()"> первая-последняя
+            </label>
+            <label class="radio-button">
+                <input type="radio" name="diffOption" value="penultimate-last" onchange="updateDiff()"> предпоследняя-последняя
+            </label>
+        </div>
+
         <!-- Список категорий -->
         <div id="category-container">
             <h3>Список категорий</h3>
