Feature: Double-sided sliders with functionality

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -53,10 +53,10 @@
         <div id="sliders">
             <div>
                 <section class="range-slider">
-                    <label>Текущая цена:</label>
+                    <label>Последняя цена:</label>
                     <span class="rangeValues"></span>
-                    <input value="0" min="0" max="50000" step="500" type="range">
-                    <input value="50000" min="500" max="50000" step="500" type="range">
+                    <input value="0" min="0" max="50000" step="10" type="range">
+                    <input value="50000" min="500" max="50000" step="10" type="range">
                 </section>
             </div>
 
@@ -64,8 +64,8 @@
                 <section class="range-slider">
                     <label>Разница цен:</label>
                     <span class="rangeValues"></span>
-                    <input value="0" min="0" max="50000" step="500" type="range">
-                    <input value="50000" min="500" max="50000" step="500" type="range">
+                    <input value="0" min="0" max="50000" step="10" type="range">
+                    <input value="50000" min="500" max="50000" step="10" type="range">
                 </section>
             </div>
         </div>
