--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -50,6 +50,8 @@
             </label>
         </div>
 
+        <!-- Слайдеры цен -->
+        <h3>Фильтр цен:</h3>
         <div id="sliders">
             <div>
                 <section class="range-slider">
@@ -68,6 +70,12 @@
                     <input value="50000" min="500" max="50000" step="10" type="range">
                 </section>
             </div>
+        </div>
+
+        <!-- Фильтр ссылок -->
+        <div>
+            <h3>Фильтр ссылок:</h3>
+            <input type="text" id="filterInput" placeholder="Введите текст для фильтрации...">
         </div>
 
         <!-- Список категорий -->
