--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,11 +25,25 @@
     <div id="category-container">
         <h3>Список категорий</h3>
         <ul id="category-list">
-            <li th:each="category : ${data.keySet()}"
-                th:attr="data-category=${category}">
-                <a>
-                    <span th:text="${category}"></span>
-                </a>
+            <!-- Главная категория -->
+            <li th:each="mainCategory : ${categories.keySet()}" class="category-item">
+                <span class="toggle-btn">▶</span>
+                <strong th:text="${mainCategory}"></strong>
+                <ul class="nested">
+                    <!-- Подкатегория -->
+                    <li th:each="subCategory : ${categories.get(mainCategory).keySet()}" class="subcategory-item">
+                        <span class="toggle-btn">▶</span>
+                        <span th:text="${subCategory}"></span>
+                        <ul class="nested">
+                            <!-- Название группы товаров -->
+                            <li th:each="item : ${categories.get(mainCategory).get(subCategory).keySet()}" th:attr="data-category=${item}">
+                                <a>
+                                    <span th:text="${item}"></span>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
             </li>
         </ul>
     </div>
