--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -4,6 +4,7 @@ body {
     flex-direction: column;
     align-items: center;
     font-family: Arial, sans-serif;
+    font-size: 14px;
 }
 li {
     list-style-type: none;
@@ -81,6 +82,7 @@ a {
     margin-right: 5px;
     user-select: none;
     font-size: 14px;
+    padding: 8px;
 }
 .open > .nested {
     display: block;
