--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -90,7 +90,7 @@
             </div>
 
             <!-- Фильтр цен -->
-            <h3>Фильтр цен в диапазоне:</h3>
+            <h3>Фильтры:</h3>
             <div id="sliders">
                 <div>
                     <section class="range-slider">
@@ -112,8 +112,16 @@
 
             <!-- Фильтр ссылок -->
             <div>
-                <h3>Фильтр ссылок:</h3>
                 <input type="text" id="filterInput" placeholder="Введите текст для фильтрации...">
+            </div>
+
+            <!-- Фильтр по количеству отображаемых строк -->
+            <div>
+                <label for="row-slider">Количество отображаемых строк:</label>
+                <div id="row-container">
+                    <input type="range" id="row-slider" min="10" max="2000" value="500">
+                    <div id="row-count">500</div>
+                </div>
             </div>
 
             <div id="apply-container">
