Add: Overlay load

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -106,7 +106,7 @@
 
             <!-- Фильтр ссылок -->
             <div>
-                <input type="text" id="filterInput" placeholder="Введите текст для фильтрации...">
+                <input type="text" id="filterInput" placeholder="Введите текст для фильтрации по ссылкам...">
             </div>
 
             <!-- Фильтр по количеству отображаемых строк -->
@@ -129,6 +129,11 @@
             </div>
         </aside>
     </section>
+</div>
+
+<!-- Окно загрузки -->
+<div class="overlay" id="loadingOverlay">
+    <div class="loader"></div>
 </div>
 
 <!-- Подгрузка данных извлечённых из таблицы -->
