Feature: New inputs for price sliders

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -89,17 +89,19 @@
                 <div>
                     <section class="range-slider">
                         <label>Последняя цена:</label>
-                        <span class="rangeValues"></span>
-                        <input value="0" min="0" max="50000" step="1" type="range">
-                        <input value="50000" min="0" max="50000" step="1" type="range">
+                        <input type="number" class="min-input" value="0" min="0" max="50000" step="1">
+                        <input type="number" class="max-input" value="50000" min="0" max="50000" step="1">
+                        <input type="range" class="min-slider" value="0" min="0" max="50000" step="1">
+                        <input type="range" class="max-slider" value="50000" min="0" max="50000" step="1">
                     </section>
                 </div>
                 <div>
                     <section class="range-slider">
                         <label>Разница цен:</label>
-                        <span class="rangeValues"></span>
-                        <input value="0" min="0" max="50000" step="1" type="range">
-                        <input value="50000" min="0" max="50000" step="1" type="range">
+                        <input type="number" class="min-input" value="0" min="0" max="50000" step="1">
+                        <input type="number" class="max-input" value="50000" min="0" max="50000" step="1">
+                        <input type="range" class="min-slider" value="0" min="0" max="50000" step="1">
+                        <input type="range" class="max-slider" value="50000" min="0" max="50000" step="1">
                     </section>
                 </div>
             </div>
